# protowire-python

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
scripts/: bench_pxf.py  bench_sbe.py  cibw_install_protobuf_linux.sh  dump_envelope.py
src/_protowire/: module.cc
src/protowire/: __init__.py  _schema.py  envelope.py  pxf.py  sbe.py
testdata/: order.proto  test.proto
tests/: conftest.py  test_envelope.py  test_pxf.py  test_pxf_dataset_reader.py  test_pxf_directives.py  test_pxf_full_roundtrip.py  test_pxf_proto_directive.py  test_pxf_table_reader.py  test_sbe.py  test_sbe_view_navigation.py
